# Email

./: .dockerignore  .gitignore  Dockerfile  README.md  __init__.py  _check_google.py  _tmp_validate_runtime.py  client.py  docker-compose.yml  inference.py  main.py  models.py  pyproject.toml  requirements.txt  run_tests.bat  test_api.py  test_env.py
my_env/: Dockerfile  README.md  inference.py  pyproject.toml  tasks.db  validate.py
my_env/client/: package-lock.json  package.json
my_env/client/src/: App.jsx  index.css
my_env/openenv_my_env.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
my_env/server/: Dockerfile  ai_engine.py  app.py  auth.py  database.py  gmail_service.py  inference.py  logger.py  main.py  models.py  nlp.py  requirements.space.txt  requirements.txt
my_env/server/__pycache__/: gmail_service.cpython-314.pyc.1508253920368
server/: __init__.py  app.py  main.py  my_env_environment.py
